--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -3,6 +3,14 @@
 
 {% block content%}
 
+<video autoplay muted playsinline loop width="100" height="500" controls id="myVideo">
+    <source src="{% static 'main.mp4'%}" type="video/mp4">
+    <P>DEUS</P>
+    <source src="{% static 'main.mp4'%}" type="video/webm">
+    Your browser does not support the video tag
+</video> 
+
+
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
         <div class="owl-carousel header-carousel position-relative">
