--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -3,13 +3,6 @@
 
 {% block content%}
 
-<video autoplay muted playsinline loop width="100%" height="500" controls id="myVideo">
-    <source src="{% static 'church.mp4'%}" type="video/mp4">
-    <P>DEUS</P>
-    <source src="{% static 'church.mp4'%}" type="video/webm">
-    Your browser does not support the video tag
-</video> 
-
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5">
@@ -38,7 +31,7 @@
                             <div class="col-sm-10 col-lg-8">
                                 <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5>
                                 <h1 class="display-3 text-white animated slideInDown">Get Educated Online From Your Home</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea sanctus eirmod elitr.</p>
+                                <p class="fs-5 text-white mb-4 pb-2"> Ipsum dolor at sed stet sirebum sea sanctus eirmod elitr.</p>
                                 <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
                                 <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
                             </div>
