--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -13,11 +13,8 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-sm-10 col-lg-8">
-                                <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5>
-                                <h1 class="display-3 text-white animated slideInDown">The Best Online Learning Platform</h1>
-                                <p class="fs-5 text-white mb-4 pb-2">psum et diam justo clita et kasd rebum sea sanctus eirmod elitr.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
+                                <h1 class="display-3 text-white animated slideInDown">Inspiring</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">Inspiring people to follow Jesus and fearlessly change the world.</p>
                             </div>
                         </div>
                     </div>
@@ -29,11 +26,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-sm-10 col-lg-8">
-                                <h5 class="text-primary text-uppercase mb-3 animated slideInDown">Best Online Courses</h5>
-                                <h1 class="display-3 text-white animated slideInDown">Get Educated Online From Your Home</h1>
-                                <p class="fs-5 text-white mb-4 pb-2"> Ipsum dolor at sed stet sirebum sea sanctus eirmod elitr.</p>
-                                <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">Read More</a>
-                                <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
+                                <h1 class="display-3 text-white animated slideInDown">Ways to Experience Mariners</h1>
+                                <p class="fs-5 text-white mb-4 pb-2">There are several ways to participate in Mariners’ worship experiences. Whatever your comfort level, 
+                                    there are opportunities for you to join in community and draw nearer to Jesus.</p>
                             </div>
                         </div>
                     </div>
@@ -53,8 +48,8 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
-                            <h5 class="mb-3">Skilled Instructors</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <h5 class="mb-3">Inspiring</h5>
+                            <p>Inspiring people to follow Jesus and fearlessly change the world</p>
                         </div>
                     </div>
                 </div>
@@ -62,8 +57,8 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-globe text-primary mb-4"></i>
-                            <h5 class="mb-3">Online Classes</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <h5 class="mb-3">Fountain Church Gatherings</h5>
+                            <p>Join us as we gather at one of our Fountain campuses.</p>
                         </div>
                     </div>
                 </div>
@@ -71,8 +66,8 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-home text-primary mb-4"></i>
-                            <h5 class="mb-3">Home Projects</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <h5 class="mb-3">Fountain Hosted Heres</h5>
+                            <p>  We bring worship services to people unable to attend church regularly</p>
                         </div>
                     </div>
                 </div>
@@ -80,8 +75,8 @@
                     <div class="service-item text-center pt-3">
                         <div class="p-4">
                             <i class="fa fa-3x fa-book-open text-primary mb-4"></i>
-                            <h5 class="mb-3">Book Library</h5>
-                            <p>Diam elitr kasd sed at elitr sed ipsum justo dolor sed clita amet diam</p>
+                            <h5 class="mb-3">Fountain Church Online</h5>
+                            <p>Join our weekly live-stream and online midweek programming to experience Fountain from anywhere.</p>
                         </div>
                     </div>
                 </div>
@@ -96,8 +91,8 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Courses</h6>
-                <h1 class="mb-5">Popular Courses</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3">Current</h6>
+                <h1 class="mb-5">Current Series</h1>
             </div>
             <div class="row g-4 justify-content-center">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
