--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -9,7 +9,7 @@
         <div class="owl-carousel header-carousel position-relative">
             {% for first_image in first_images %}
             <div class="owl-carousel-item position-relative">
-                <img class="img-fluid" src="{{ first_image.fountain_church_img_img.url }}"height="10%"  alt="">
+                <img class="img-fluid" src="{{ first_image.fountain_church_img_img.url }}"style="height: 610px; width: 100%; object-fit: cover;"  alt="">
                 <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                     <div class="container">
                         <div class="row justify-content-start">
@@ -87,13 +87,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="{% static 'img/intro.jpg' %}" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/intro.jpg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="{% static 'img/rep.jpg' %}" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/rep.jpg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="{% static 'img/img.jpeg' %}" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/img.jpeg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
                           </div>
                         </div>
                       </div>
@@ -118,7 +118,7 @@
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2" href="">About Us</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="">About Us</a>
                 </div>
             </div>
         </div>
@@ -131,42 +131,23 @@
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
-                <h6 class="section-title bg-white text-center text-primary px-3">Testimonial</h6>
-                <h1 class="mb-5">Member's Testimony</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3">Witnesses of Grace</h6>
+                <h4 class="mb-2">Welcome to our "Witnesses of Grace" section, where we share the powerful 
+                    stories and testimonies of how God's grace has transformed lives within our community.</h4>
             </div>
-            <div class="owl-carousel testimonial-carousel position-relative">
-                <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{% static 'img/testimonial-1.jpg' %}" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Client Name</h5>
-                    <p>Profession</p>
-                    <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
+            <div class="owl-carousel testimonial-carousel position-relative" style="border-radius: 15px; overflow: hidden;">
+                {% for testimony_image in testimony_images %}
+                <div class="testimonial-item text-center" style="border-radius: 5px; overflow: hidden;">
+                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{{ testimony_image.fountain_church_minister_home_img.url }}" style="width: 80px; height: 80px; border-radius: 50%;">
+                    <h5 class="mb-0">{{ testimony_image.fountain_church_minister_home_title }}</h5>
+                    <p>{{ testimony_image.fountain_church_minister_home_position }}</p>
+                    <div class="testimonial-text bg-light text-center p-4" style="border-radius: 15px;">
+                        <p class="mb-0">{{ testimony_image.fountain_church_minister_home_description }}</p>
                     </div>
                 </div>
-                <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{% static 'img/testimonial-2.jpg'%}" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Client Name</h5>
-                    <p>Profession</p>
-                    <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
-                    </div>
-                </div>
-                <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{% static 'img/testimonial-3.jpg' %}" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Client Name</h5>
-                    <p>Profession</p>
-                    <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
-                    </div>
-                </div>
-                <div class="testimonial-item text-center">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{% static 'img/testimonial-4.jpg' %}" style="width: 80px; height: 80px;">
-                    <h5 class="mb-0">Client Name</h5>
-                    <p>Profession</p>
-                    <div class="testimonial-text bg-light text-center p-4">
-                    <p class="mb-0">Tempor erat elitr rebum at clita. Diam dolor diam ipsum sit diam amet diam et eos. Clita erat ipsum et lorem et sit.</p>
-                    </div>
-                </div>
+                {% endfor %}
+            </div>
+            
             </div>
         </div>
     </div>
@@ -186,20 +167,20 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="{{ post.fountain_church_img.url }}"height="200px" alt="">
+                            <img class="img-fluid" src="{{ post.fountain_church_img.url }}" style="height: 200px; width: 100%; object-fit: cover;" alt="">
                         </div>
                         <div class="text-center p-4 pb-0">
                             <h3 class="mb-0">{{ post.fountain_church_title|truncatechars:20 }}</h3>
                             <p class="mb-4">{{ post.fountain_church_description|truncatechars:70 }}</p>
                         </div>
-                            <center>
-                                <div class="btn-wrapper">
-                                    <a href="" class="btn btn-primary"style="border-radius: 10px;">Read More</a>
-                                </div>
-                            </center>
+                        <center>
+                            <div class="btn-wrapper">
+                                <a href="" class="btn btn-primary" style="border-radius: 10px;">Read More</a>
+                            </div>
+                        </center>
                     </div>
                 </div>
-                {% endfor %}
+                {% endfor %}            
             </div>
         </div>
     </div>
