--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -97,9 +97,7 @@
                           </div>
                         </div>
                       </div>
-
-
-                </div>
+                   </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h2 class="mb-4">Welcome to Fountain Church, Weekly Activity Announcements</h2>
                     <p class="mb-4">Welcome to Fountain of The Living Church We’re excited to share this week’s activities and 
@@ -175,8 +173,8 @@
                         </div>
                         <center>
                             <div class="btn-wrapper">
-                                <a href="" class="btn btn-primary" style="border-radius: 10px;">Read More</a>
-                            </div>
+                                <a href="" class="btn btn-primary" style="border-radius: 10px;">View More</a>
+                            </div><br>
                         </center>
                     </div>
                 </div>
