--- a/templates/fountainchurch/about_us.html
+++ b/templates/fountainchurch/about_us.html
@@ -25,6 +25,45 @@
 
 
 
+    <!-- Service Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="service-item text-center pt-3">
+                        <div class="p-4">
+                            <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
+                            <h5 class="mb-3">Inspiring</h5>
+                            <p>Inspiring people to follow Jesus and fearlessly change the world</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="service-item text-center pt-3">
+                        <div class="p-4">
+                            <i class="fa fa-3x fa-globe text-primary mb-4"></i>
+                            <h5 class="mb-3">Fountain Church Gatherings</h5>
+                            <p>Join us as we gather at one of our Fountain campuses.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="service-item text-center pt-3">
+                        <div class="p-4">
+                            <i class="fa fa-3x fa-home text-primary mb-4"></i>
+                            <h5 class="mb-3">Fountain Hosted Heres</h5>
+                            <p>  We bring worship services to people unable to attend church regularly</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Service End -->
+
+
+
+
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
@@ -47,8 +86,9 @@
                    </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
                     <h3 class="mb-4">About Fountain Of The Living Church</h3>
-                    <p class="mb-4">Welcome to Fountain of The Living Church We’re excited to share this week’s activities and 
-                        events with you. We hope you can join us and be a part of our vibrant community</p>
+                    <p class="mb-4">Fountain of the Living Word Nigeria, is a Pentecostal faith-based church, 
+                        affiliated with the Fountain of the Living Word, East Orange, 
+                        New Jersey, US.It is one of the fast growing churches with focus on God's word. We teach the truth and shape lives.</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-10">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday School: 8:00 AM - 9:00 AM</p>
@@ -63,12 +103,14 @@
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="">About Us</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="">Contact Us</a>
                 </div>
             </div>
         </div>
     </div>
     <!-- About End -->
+
+
 
 
 
