--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -114,7 +114,7 @@
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="">About Us</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="{% url 'about' %}">About Us</a>
                 </div>
             </div>
         </div>
