--- a/templates/fountainchurch/about_us.html
+++ b/templates/fountainchurch/about_us.html
@@ -13,7 +13,7 @@
                 <h1 class="display-3 text-white animated slideInDown">About Us</h1>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb justify-content-center">
-                        <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
+                        <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
                         <li class="breadcrumb-item"><a class="text-white" href="#">Contact</a></li>
                     </ol>
                 </nav>
@@ -103,7 +103,7 @@
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
                         </div>
                     </div>
-                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="">Contact Us</a>
+                    <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="{% url 'contact' %}">Contact Us</a>
                 </div>
             </div>
         </div>
