--- a/templates/base.html
+++ b/templates/base.html
@@ -62,10 +62,10 @@
                     </div>
                 </div>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Event</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Media</a>
                     <div class="dropdown-menu fade-down m-0">
-                        <a href="team.html" class="dropdown-item">Our Team</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                        <a href="{% url 'events' %}" class="dropdown-item">News & Events</a>
+                        <a href="testimonial.html" class="dropdown-item">Blog</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
