--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -37,7 +37,7 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-graduation-cap text-primary mb-4"></i>
                             <h5 class="mb-3">Inspiring</h5>
-                            <p>Inspiring people to follow Jesus and fearlessly change the world</p>
+                            <p>Inspiring people to follow Jesus and fearlessly change the</p>
                         </div>
                     </div>
                 </div>
