The site last commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -65,7 +65,7 @@
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Media</a>
                     <div class="dropdown-menu fade-down m-0">
                         <a href="{% url 'events' %}" class="dropdown-item">News & Events</a>
-                        <a href="testimonial.html" class="dropdown-item">Blog</a>
+                        <a href="{% url 'blog' %}" class="dropdown-item">Blog</a>
                         <a href="404.html" class="dropdown-item">404 Page</a>
                     </div>
                 </div>
