--- a/templates/fountainchurch/blog.html
+++ b/templates/fountainchurch/blog.html
@@ -1,7 +1,7 @@
 
 {% extends "base.html" %}
 {% load static %}
-{% block title %} Events and News {% endblock %}
+{% block title %} Blog post {% endblock %}
 {% block content%}
 
     <!-- Header Start -->
@@ -9,11 +9,11 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Fountain Up Coming Event </h1>
+                    <h1 class="display-3 text-white animated slideInDown">Fountain Blog </h1>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="#">Home</a></li>
-                            <li class="breadcrumb-item"><a class="text-white" href="#">Blog Post</a></li>
+                            <li class="breadcrumb-item"><a class="text-white" href="#">Events</a></li>
                         </ol>
                     </nav>
                 </div>
@@ -28,15 +28,15 @@
     <div class="container-xxl py-5">
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                <h6 class="section-title bg-white text-center text-primary px-3">Church News</h6>
-                <h1 class="mb-5">Popular Events</h1>
+                <h6 class="section-title bg-white text-center text-primary px-3"> Blog Post</h6>
+                <h1 class="mb-5">Church Blog</h1>
             </div>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="{{ post.Events_img.url }}"style="height: 250px; width: 100%; object-fit: cover;" alt="">
+                            <img class="img-fluid" src="{{ post.blog_img.url }}"style="height: 250px; width: 100%; object-fit: cover;" alt="">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
@@ -49,13 +49,11 @@
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
-                                <small class="fa fa-star text-primary"></small>
                             </div>
-                            <p class="mb-4">{{ post.Events_description|truncatechars:70 }}</p>
+                            <p class="mb-4">{{ post.blog_description|truncatechars:70 }}</p>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>{{ post.Events_time }}</small>
-                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>{{ post.Events_date_event }}</small>
+                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>{{ post.blog_author }}</small>
                         </div>
                     </div>
                 </div>
