The site last commit

--- a/templates/fountainchurch/blog.html
+++ b/templates/fountainchurch/blog.html
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <h3 class="mb-0">{{ post.Events_title|truncatechars:20}}</h3>
+                            <h3 class="mb-0">{{ post.blog_title|truncatechars:20}}</h3>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
@@ -52,9 +52,10 @@
                             </div>
                             <p class="mb-4">{{ post.blog_description|truncatechars:70 }}</p>
                         </div>
-                        <div class="d-flex border-top">
-                            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>{{ post.blog_author }}</small>
-                        </div>
+                            <div class="btn-wrapper">
+                                <a href="" class="btn btn-primary" style="border-radius: 10px;">Read More</a>
+                            </div>
+                
                     </div>
                 </div>
                 {% endfor %}
