--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -36,14 +36,17 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
+                            <a href="{% url 'events_article_detail' post.pk %}">
                             <img class="img-fluid" src="{{ post.Events_img.url }}"style="height: 250px; width: 100%; object-fit: cover;" alt="">
+                            </a>
+                          
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
+                                <a href="{% url 'events_article_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
                                 <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <h3 class="mb-0">{{ post.Events_title|truncatechars:20}}</h3>
+                            <a href="{% url 'events_article_detail' post.pk %}"> <h3 class="mb-0">{{ post.Events_title|truncatechars:20}}</h3></a>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
