The site last commit

--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -23,6 +23,43 @@
     <!-- Header End -->
 
 
+    <!-- Service Start -->
+    <div class="container-xxl py-5">
+        <div class="container">
+            <div class="row g-4">
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="service-item text-center pt-3">
+                        <div class="p-4">
+                            <i class="fa fa-3x fa-church text-primary mb-4"></i>
+                            <h5 class="mb-3">Sunday Service</h5>
+                            <p>Inspiring people to follow Jesus and fearlessly change the</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.3s">
+                    <div class="service-item text-center pt-3">
+                        <div class="p-4"> 
+                            <i class="fa fa-3x fa-church text- primary mb-4"></i>
+                            <h5 class="mb-3">Monday Service</h5>
+                            <p>Join us as we gather at one of our Fountain campuses.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-sm-6 wow fadeInUp" data-wow-delay="0.5s">
+                    <div class="service-item text-center pt-3">
+                        <div class="p-4">
+                            <i class="fa fa-3x fa-church text-primary mb-4"></i>
+                            <h5 class="mb-3">Wednesday Service</h5>
+                            <p>  We bring worship services to people unable to attend church regularly</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Service End -->
+
+
 
     <!-- Courses Start -->
     <div class="container-xxl py-5">
