--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -90,6 +90,7 @@
                     <h2 class="mb-4">Welcome to Fountain Church, Weekly Activity Announcements</h2>
                     <p class="mb-4">Welcome to Fountain of The Living Church We’re excited to share this week’s activities and 
                         events with you. We hope you can join us and be a part of our vibrant community</p>
+                    <a href="{% url 'events' %}">
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-10">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i> Sunday School: 8:00 AM - 9:00 AM</p>
@@ -103,7 +104,7 @@
                         <div class="col-sm-10">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Wednesday Bible Study: 6:30 PM - 8:30 PM </p>
                         </div>
-                    </div>
+                    </div></a>
                     <a class="btn btn-primary py-3 px-5 mt-2"style="border-radius: 15px;" href="{% url 'about' %}">About Us</a>
                 </div>
             </div>
