The site last commit

--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -9,7 +9,7 @@
         <div class="container py-5">
             <div class="row justify-content-center">
                 <div class="col-lg-10 text-center">
-                    <h1 class="display-3 text-white animated slideInDown">Fountain Up Coming Event </h1>
+                    <h6 class="display-6 text-white animated slideInDown">Fountain Church and Up Coming Event Activities </h6>
                     <nav aria-label="breadcrumb">
                         <ol class="breadcrumb justify-content-center">
                             <li class="breadcrumb-item"><a class="text-white" href="{% url 'home' %}">Home</a></li>
@@ -32,7 +32,8 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-church text-primary mb-4"></i>
                             <h5 class="mb-3">Sunday Service</h5>
-                            <p>Inspiring people to follow Jesus and fearlessly change the</p>
+                            <p>Sunday School: 8:00 AM - 9:00 AM</p>
+                            <p>Sunday Service: 9:00 AM - 11: AM</p>
                         </div>
                     </div>
                 </div>
@@ -41,7 +42,7 @@
                         <div class="p-4"> 
                             <i class="fa fa-3x fa-church text- primary mb-4"></i>
                             <h5 class="mb-3">Monday Service</h5>
-                            <p>Join us as we gather at one of our Fountain campuses.</p>
+                            <p>Monday Prayer Meeting: 6:30 PM - 8:00 PM</p>
                         </div>
                     </div>
                 </div>
@@ -50,7 +51,7 @@
                         <div class="p-4">
                             <i class="fa fa-3x fa-church text-primary mb-4"></i>
                             <h5 class="mb-3">Wednesday Service</h5>
-                            <p>  We bring worship services to people unable to attend church regularly</p>
+                            <p>Wednesday Bible Study: 6:30 PM - 8:30 PM</p>
                         </div>
                     </div>
                 </div>
