The site last commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -71,7 +71,7 @@
                     <div class="dropdown-menu fade-down m-0">
                         <a href="{% url 'events' %}" class="dropdown-item">News & Events</a>
                         <a href="{% url 'blog' %}" class="dropdown-item">Blog</a>
-                        <a href="" class="dropdown-item">Galary</a>
+                        <a href="{% url 'galary' %}" class="dropdown-item">Galary</a>
                     </div>
                 </div>
                 <a href="{% url 'contact' %}" class="nav-item nav-link">Contact</a>
