The site last commit

--- a/templates/base.html
+++ b/templates/base.html
@@ -124,6 +124,7 @@
                     <a class="btn btn-link" href="{% url 'about' %}">About Us</a>
                     <a class="btn btn-link" href="{% url 'contact' %}">Contact Us</a>
                     <a class="btn btn-link" href="{% url 'sermons' %}">Sermons</a>
+                    <a class="btn btn-link" href="{% url 'galary' %}">Galary</a>
                     <a class="btn btn-link" href="">Privacy Policy</a>
                 </div>
                 
