--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -79,12 +79,12 @@
                             </a>
                           
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="{% url 'events_article_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
-                                <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
+                                <a href="{% url 'events_article_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 10 10 30px;">Read More</a>
+                                <a href="{% url 'contact' %}" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <a href="{% url 'events_article_detail' post.pk %}"> <h3 class="mb-0">{{ post.Events_title|truncatechars:20}}</h3></a>
+                            <a href="{% url 'events_article_detail' post.pk %}"> <h4 class="mb-0">{{ post.Events_title|truncatechars:20}}</h4></a>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
