--- a/templates/fountainchurch/galary.html
+++ b/templates/fountainchurch/galary.html
@@ -35,16 +35,16 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <a href="{% url 'blog_detail' post.pk %}">
+                            <a href="{% url 'galary_detail' post.pk %}">
                             <img class="img-fluid" src="{{ post.galary_img.url }}"style="height: 300px; width: 100%; object-fit: cover;" alt="">
                         </a>
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                <a href="{% url 'blog_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 10 10 30px;">View</a>
+                                <a href="{% url 'galary_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 10 10 30px;">View</a>
                             </div>
                        
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <a href="{% url 'blog_detail' post.pk %}"> <h3 class="mb-0">{{ post.galary_title|truncatechars:20}}</h3></a>
+                            <a href="{% url 'galary_detail' post.pk %}"> <h5 class="mb-0">{{ post.galary_title|truncatechars:20}}</h5></a>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
