--- a/templates/fountainchurch/galary_article_detail.html
+++ b/templates/fountainchurch/galary_article_detail.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% load static %}
-{% block title %}{{ object.blog_title }}{% endblock %}
+{% block title %}{{ object.galary_title }}{% endblock %}
 {% block content%}
 
   <!-- Header Start -->
@@ -24,17 +24,16 @@
     <!-- About Start -->
     <div class="container-xxl py-5">
         <div class="container">
-            <p class="mb-4">{{ object.blog_date }}</p>
+            <p class="mb-4">{{ object.galary_date }}</p>
             <div class="row g-5">
                 <div class="col-lg-12 wow fadeInUp" data-wow-delay="0.1s" style="min-height: 400px;">
                     <div class="position-relative h-100">
-                        <img class="img-fluid position-absolute w-99 h-100" src="{{ object.blog_img.url }}" alt="" style="object-fit: cover; border-radius: 10px;">
+                        <img class="img-fluid position-absolute w-99 h-100" src="{{ object.galary_img.url }}" alt="" style="object-fit: cover; border-radius: 10px;">
                     </div>
                 </div>
                 <div class="col-lg-9 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">  </h6>
-                    <h1 class="mb-4">{{ object.blog_title }}</h1>
-                    <p class="mb-4">{{ object.blog_description }}</p>
+                    <h1 class="mb-4">{{ object.galary_title }}</h1>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Posted by: Church</p>
