--- a/templates/fountainchurch/about_us.html
+++ b/templates/fountainchurch/about_us.html
@@ -85,7 +85,7 @@
                       </div>
                    </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h3 class="mb-4">About Fountain Of The Living Church</h3>
+                    <h3 class="mb-4"style="color: #d4af37;">About Fountain Of The Living Church</h3>
                     <p class="mb-4">Fountain of the Living Word Nigeria, is a Pentecostal faith-based church, 
                         affiliated with the Fountain of the Living Word, East Orange, 
                         New Jersey, US.It is one of the fast growing churches with focus on God's word. We teach the truth and shape lives.</p>
