--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -84,7 +84,7 @@
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <a href="{% url 'events_article_detail' post.pk %}"> <h4 class="mb-0">{{ post.Events_title|truncatechars:20}}</h4></a>
+                            <a href="{% url 'events_article_detail' post.pk %}"> <h4 class="mb-0"style="color: #d4af37;">{{ post.Events_title|truncatechars:20}}</h4></a>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
