--- a/templates/fountainchurch/galary.html
+++ b/templates/fountainchurch/galary.html
@@ -44,7 +44,7 @@
                        
                         </div>
                         <div class="text-center p-4 pb-0">
-                            <a href="{% url 'galary_detail' post.pk %}"> <h5 class="mb-0">{{ post.galary_title|truncatechars:20}}</h5></a>
+                            <a href="{% url 'galary_detail' post.pk %}"> <h5 class="mb-0"style="color: #d4af37;">{{ post.galary_title|truncatechars:20}}</h5></a>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
                                 <small class="fa fa-star text-primary"></small>
