--- a/templates/fountainchurch/sermons.html
+++ b/templates/fountainchurch/sermons.html
@@ -46,7 +46,7 @@
                         </div>
                         <div class="text-center p-4 pb-0">
                             <a href="{%  url 'sermons_detail' post.pk %}">
-                             <h3 class="mb-0">{{ post.sermons_title|truncatechars:15}}</h3>
+                             <h3 class="mb-0"style="color: #d4af37;">{{ post.sermons_title|truncatechars:15}}</h3>
                             </a>
                             <div class="mb-3">
                                 <small class="fa fa-star text-primary"></small>
