--- a/templates/fountainchurch/contact.html
+++ b/templates/fountainchurch/contact.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">Contact Us</h6>
-                <h1 class="mb-5">Contact For Any Query</h1>
+                <h1 class="mb-5"style="color: #d4af37;">Contact For Any Query</h1>
             </div>
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
