--- a/templates/fountainchurch/event_article.html
+++ b/templates/fountainchurch/event_article.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-lg-9 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">  </h6>
-                    <h1 class="mb-4">{{ object.Events_title }}</h1>
+                    <h1 class="mb-4"style="color: #d4af37;">{{ object.Events_title }}</h1>
                     <p class="mb-4">{{ object.Events_description }}</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
