--- a/templates/fountainchurch/galary_article_detail.html
+++ b/templates/fountainchurch/galary_article_detail.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col-lg-9 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">  </h6>
-                    <h1 class="mb-4">{{ object.galary_title }}</h1>
+                    <h1 class="mb-4"style="color: #d4af37;">{{ object.galary_title }}</h1>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
                             <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>Posted by: Church</p>
