--- a/templates/fountainchurch/sermons_article_detail.html
+++ b/templates/fountainchurch/sermons_article_detail.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col-lg-9 wow fadeInUp" data-wow-delay="0.3s">
                     <h6 class="section-title bg-white text-start text-primary pe-3">  </h6>
-                    <h1 class="mb-4">{{ object.sermons_title }}</h1>
+                    <h1 class="mb-4"style="color: #d4af37;">{{ object.sermons_title }}</h1>
                     <p class="mb-4">{{ object.sermons_description }}</p>
                     <div class="row gy-2 gx-4 mb-4">
                         <div class="col-sm-6">
