The padding of each section is been change

--- a/templates/fountainchurch/about_us.html
+++ b/templates/fountainchurch/about_us.html
@@ -73,13 +73,13 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="{% static 'img/intro.jpg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/intro.jpg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="{% static 'img/rep.jpg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/rep.jpg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="{% static 'img/img.jpeg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/img.jpeg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
                           </div>
                         </div>
                       </div>
