--- a/templates/fountainchurch/events.html
+++ b/templates/fountainchurch/events.html
@@ -75,7 +75,7 @@
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
                             <a href="{% url 'events_article_detail' post.pk %}">
-                            <img class="img-fluid" src="{{ post.Events_img.url }}"style="height: 250px; width: 100%; object-fit: cover;" alt="">
+                            <img class="img-fluid" src="{{ post.Events_img.url }}"style="height: 250px; width: 100%; object-fit: cover; border-radius:5px;" alt="">
                             </a>
                           
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
