--- a/templates/fountainchurch/galary.html
+++ b/templates/fountainchurch/galary.html
@@ -29,14 +29,14 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3"> Galary Post</h6>
-            </div><br>
+            </div><br><br>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
                             <a href="{% url 'galary_detail' post.pk %}">
-                            <img class="img-fluid" src="{{ post.galary_img.url }}"style="height: 300px; width: 100%; object-fit: cover;" alt="">
+                            <img class="img-fluid" src="{{ post.galary_img.url }}"style="height: 300px; width: 100%; object-fit: cover; border-radius:5px;" alt="">
                         </a>
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="{% url 'galary_detail' post.pk %}" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 10 10 30px;">View</a>
