--- a/templates/fountainchurch/home.html
+++ b/templates/fountainchurch/home.html
@@ -75,19 +75,19 @@
                     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
                           <div class="carousel-item active">
-                            <img src="{% static 'img/intro.jpg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/intro.jpg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="{% static 'img/rep.jpg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/rep.jpg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
                           </div>
                           <div class="carousel-item">
-                            <img src="{% static 'img/img.jpeg' %}"style="height: 400px; width: 100%; object-fit: cover;" class="d-block w-100" alt="...">
+                            <img src="{% static 'img/img.jpeg' %}"style="height: 400px; width: 100%; object-fit: cover; border-radius:5px;" class="d-block w-100" alt="...">
                           </div>
                         </div>
                       </div>
                    </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.3s">
-                    <h2 class="mb-4">Welcome to Fountain Church, Weekly Activity Announcements</h2>
+                    <h2 class="mb-4"style="color: #d4af37;">Welcome to Fountain Church, Weekly Activity Announcements</h2>
                     <p class="mb-4">Welcome to Fountain of The Living Church We’re excited to share this week’s activities and 
                         events with you. We hope you can join us and be a part of our vibrant community</p>
                     <a href="{% url 'events' %}">
@@ -121,7 +121,7 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">Current</h6>
-                <h1 class="mb-5">Current Series</h1>
+                <h1 class="mb-5"style="color: #d4af37;">Current Series</h1>
             </div>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
@@ -129,7 +129,7 @@
                     <div class="course-item bg-light">
                         <a href="{% url 'detail' post.pk %}">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="{{ post.fountain_church_img.url }}" style="height: 200px; width: 100%; object-fit: cover;" alt="">
+                            <img class="img-fluid" src="{{ post.fountain_church_img.url }}" style="height: 200px; width: 100%; object-fit: cover; border-radius:5px;" alt="">
                         </div>
                       </a>
                         <div class="text-center p-4 pb-0">
@@ -149,23 +149,19 @@
     </div>
     <!-- Courses End -->
 
-
-
-
-
     
     <!-- Testimonial Start -->
     <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
         <div class="container">
             <div class="text-center">
-                <h6 class="section-title bg-white text-center text-primary px-3">Witnesses of Grace</h6>
-                <h4 class="mb-2">Welcome to our "Witnesses of Grace" section, where we share the powerful 
-                    stories and testimonies of how God's grace has transformed lives within our community.</h4>
+                <h6 class="section-title bg-white text-center text-primary px-2">Witnesses of Grace</h6>
+                <h4 class="mb-2"style="color: #d4af37;">Welcome to our "Witnesses of Grace" section, where we share the powerful 
+                    stories<br>and testimonies of how God's grace has transformed lives within our community.</h4>
             </div><br><br>
             <div class="owl-carousel testimonial-carousel position-relative" style="border-radius: 15px; overflow: hidden;">
                 {% for testimony_image in testimony_images %}
                 <div class="testimonial-item text-center" style="border-radius: 5px; overflow: hidden;">
-                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{{ testimony_image.fountain_church_minister_home_img.url }}" style="width: 80px; height: 80px; border-radius: 50%;">
+                    <img class="border rounded-circle p-2 mx-auto mb-3" src="{{ testimony_image.fountain_church_minister_home_img.url }}" style="width: 80px; height: 80px; border-radius: 50%; border-radius:5px;">
                     <h5 class="mb-0"style="color: #d4af37;">{{ testimony_image.fountain_church_minister_home_title }}</h5>
                     <p>{{ testimony_image.fountain_church_minister_home_position }}</p>
                     <div class="testimonial-text bg-light text-center p-4" style="border-radius: 15px;">
