--- a/templates/fountainchurch/pastors.html
+++ b/templates/fountainchurch/pastors.html
@@ -36,7 +36,7 @@
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
-                            <img class="img-fluid" src="{{ post.pastor_img.url }}"style="height: 250px; width: 100%; object-fit: cover;" alt="">
+                            <img class="img-fluid" src="{{ post.pastor_img.url }}"style="height: 250px; width: 100%; object-fit: cover; border-radius:5px;" alt="">
                         
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
                                 <a href="" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 10 10 30px;">{{ post.pastor_position}}</a>
