--- a/templates/fountainchurch/sermons.html
+++ b/templates/fountainchurch/sermons.html
@@ -28,14 +28,14 @@
         <div class="container">
             <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
                 <h6 class="section-title bg-white text-center text-primary px-3">Church Sermons</h6>
-            </div><br>
+            </div><br><br>
             <div class="row g-4 justify-content-center">
                 {% for post in object_list %}
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="course-item bg-light">
                         <div class="position-relative overflow-hidden">
                             <a href="{% url 'sermons_detail' post.pk %}">
-                            <video autoplay muted playsinline loop width="100%" height="40%" style="height: 250px; width: 100%; object-fit: cover;"  controls>
+                            <video autoplay muted playsinline loop width="100%" height="40%" style="height: 250px; width: 100%; object-fit: cover; border-radius:5px;"  controls>
                                 <source src="{{ post.sermons_video.url }}" type="video/mp4">
                                 Your browser does not support the video tag.
                             </video></a>
